--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +56,7 @@
     "@storybook/node-logger": "^6.2.2",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.2",
+    "chromatic": "^5.7.1",
     "storybook-addon-jsx": "^7.3.7"
   }
 }
