--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "frontend_web_code_snippets",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://gaharana.me/frontend_code_snippets/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@storybook/addon-console": "^1.2.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -19,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "predeploy": "npm run build-storybook",
+    "deploy-storybook": "gh-pages -d storybook-static",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": [
