--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "predeploy": "npm run build-storybook",
-    "deploy-storybook": "gh-pages -d storybook-static",
+    "deploy-storybook": "gh-pages -d docs",
     "build-storybook": "build-storybook -o docs"
   },
   "eslintConfig": {
