--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -16,3 +16,8 @@ jobs:
                   yarn 
                   yarn run predeploy
                   yarn run deploy-storybook
+
+            - name: Deploy
+            - uses: actions/labeler@v2
+            with:
+              repo-token: ${{ secrets.GITHUB_TOKEN }}
