--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -19,5 +19,5 @@ jobs:
 
             - name: Deploy
             - uses: actions/labeler@v2
-            with:
-              repo-token: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
