--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -21,3 +21,7 @@ jobs:
               uses: JamesIves/github-pages-deploy-action@3.6.2
               with:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  BRANCH: master # The branch the action should deploy to.
+                  FOLDER: docs-build # The folder that the build-storybook script generates files.
+                  CLEAN: true # Automatically remove deleted files from the deploy branch
+                  TARGET_FOLDER: docs
